# wordcounter

./: README.md  docker-compose.yml  pyproject.toml
api/: .flake8  Dockerfile  pyproject.toml
api/tests/: test_main.py
api/word_counter/: main.py
ui/: Dockerfile  README.md  index.html  package-lock.json  package.json
ui/src/: App.vue
