[tool.poetry]
name = "word-counter"
version = "0.1.0"
description = ""
authors = ["Matheus Lino <matheus@mrlino.com>"]
readme = "README.md"
packages = [{include = "word_counter"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
