[tool.poetry]
name = "word-counter"
version = "0.1.0"
description = "A simple form where a user may input some text. If so, then the result of the word count must be displayed back to the user."
authors = ["Matheus Lino <matheus@mrlino.com>"]
readme = "README.md"
packages = [{include = "word_counter"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
fastapi = {extras = ["all"], version = "^0.101.1"}
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
